<resources>
    <string name="app_name">Carlife+</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">音乐</string>
    <string name="title_notifications">发现</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carlife">Carlife+</string>
    <string name="carspeed">车速：未获取</string>
    <string name="Navigation">导航</string>
    <string name="open_backbox">打开后备箱</string>
    <string name="cardoor_close">车门已关闭</string>
    <string name="car_notstart">汽车未启动</string>
    <string name="cardoor_locked">车门上锁</string>
    <string name="writer">作者</string>
    <string name="release_time">发布时间:</string>
    <string name="like_music">我喜欢的音乐</string>
    <string name="into_title">请输入标题</string>
    <string name="into_text">请输入正文</string>
    <string name="join">账号登录</string>
    <string name="join_passward">请输入登录账号</string>
    <string name="login">登陆</string>
    <string name="no_number">还没有账号?</string>
    <string name="register">注册</string>
    <string name="account_register">账号注册</string>
    <string name="e_mail">邮箱</string>
    <string name="password">密码</string>
    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="no_music">无音乐</string>
    <string name="artist">艺术家</string>
    <string name="musicname">歌曲名</string>
    <string name="no_musictext">暂无歌词</string>
    <string name="_00_00">00:00</string>
    <string name="please_enter_account">请输入注册账号</string>
    <string name="please_enter_password">请输入登陆密码</string>
    <string name="please_confirm_password">请确定登陆密码</string>
    <string name="again_confirm_password">再次确认密码</string>
    <string name="nickname">昵称</string>
    <string name="age">年龄</string>
    <string name="back">返回</string>
    <string name="user">用户</string>
    <string name="header">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="person">个性签名</string>
    <string name="bluetooth">蓝牙</string>
    <string name="wifi">WIFI</string>
    <string name="not_link_bluetooth">未连接蓝牙</string>
    <string name="logined">xxxx 已登录</string>
    <string name="logout">退出登录</string>
    <string name="remoteIP">远端IP</string>
    <string name="port">Port</string>
    <string name="local_port">本地接收端口</string>
    <string name="udp">UDP</string>
    <string name="internet_service_not_start">网络服务未启动</string>
    <string name="internet_service_start">网络服务已启动</string>
    <string name="open_wifihotpots">开启WIFI热点</string>
    <string name="can_use_wifi_list">可用WIFI列表</string>
    <string name="not_link">未连接</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="singer">歌手 - 专辑</string>时长
    <string name="length">时长</string>
    <string name="find">发现</string>
    <string name="music1">音乐</string>
    <string name="edit_data">编辑资料</string>
    <string name="mytext">我的文章</string>
    <string name="myself_collection">个人收藏</string>
    <string name="clearn_cache">清除缓存</string>
    <string name="switch_account">切换账号</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="user_feedback">用户反馈</string>
    <string name="exit">退出</string>
    <string name="night_mode">夜间模式</string>
    <string name="read_title">朗读标题</string>
    <string name="time">Time</string>


</resources>