<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_edit"
            android:checkable="true"
            android:icon="@drawable/nav_personinfo"
            android:title="@string/edit_data" />
        <item android:id="@+id/nav_articles" android:title="@string/mytext" android:icon="@drawable/nav_articles"
            android:checkable="true"
            />
        <item android:id="@+id/nav_favorite" android:title="@string/myself_collection" android:icon="@drawable/nav_favorite"
            android:checkable="true"
            />
        <item android:id="@+id/nav_clear_cache" android:title="@string/clearn_cache" android:icon="@drawable/nav_clear_cache"
            android:checkable="true"
            />
        <item android:id="@+id/nav_switch" android:title="@string/switch_account" android:icon="@drawable/nav_switch" android:checkable="true"/>
    </group>
</menu>