<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/carlife"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/carspeed"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button_GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/float_transparent"
        android:text="@string/Navigation"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_speed"
        app:layout_constraintVertical_bias="0.68" />

    <Switch
        android:id="@+id/sw_carbackbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_backbox"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_GPS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_cardoor" />

    <Switch
        android:id="@+id/sw_cardoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardoor_close"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sw_carbackbox"
        app:layout_constraintEnd_toEndOf="@+id/sw_carbackbox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/sw_carbackbox"
        app:layout_constraintTop_toBottomOf="@+id/sw_carstart" />

    <Switch
        android:id="@+id/sw_carstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_notstart"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sw_cardoor"
        app:layout_constraintEnd_toEndOf="@+id/sw_cardoor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/sw_cardoor"
        app:layout_constraintTop_toBottomOf="@+id/sw_carlock" />

    <Switch
        android:id="@+id/sw_carlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardoor_locked"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sw_carstart"
        app:layout_constraintEnd_toEndOf="@+id/sw_carstart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/sw_carstart"
        app:layout_constraintTop_toBottomOf="@+id/tv_speed" />

</androidx.constraintlayout.widget.ConstraintLayout>