<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alphine.team4.carlife.ui.discover.usermodel.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/join"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/login_userAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/join"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:hint="请输入登录密码"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1"
        >
    </EditText>

    <Button
        android:id="@+id/login_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"

        android:textColor="@color/colorGray"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--
            android:layout_centerVertical="true"
            相对布局的垂直居中
        -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_number"
            android:textColor="@color/colorBlack"
            android:layout_toLeftOf="@+id/login_register"
            android:layout_centerVertical="true"
           />

        <Button
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/colorGray"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>